Fix overlaping between breadcrumb and toc-sidebar
the breacrumb has z-index (1020) greater than to toc-sidebar (1000)

- Increase z-index of toc-bar to 1100.

Issue: #23

--- a/reflow-maven-skin/src/main/resources/css/reflow-skin.css
+++ b/reflow-maven-skin/src/main/resources/css/reflow-skin.css
@@ -212,7 +212,7 @@ h1[id]:before, h2[id]:before, h3[id]:before, h4[id]:before, h5[id]:before, h6[id
  * toc top
  *--------------------------------------------------*/
 #toc-bar {
-    z-index: 1020;
+    z-index: 1120;
 }
 
 /*--------------------------------------------------
@@ -222,7 +222,7 @@ h1[id]:before, h2[id]:before, h3[id]:before, h4[id]:before, h5[id]:before, h6[id
 /* affix toc aside bar
 */
 .m-toc-sidebar-container {
-    z-index: 1000;
+    z-index: 1100;
 }
 
 .m-toc-sidebar-container.affix {
